Bug 901297 - Save and restore WebGL state for Mesa FB workarounds. - r=bjacob